# multi-tenant-saas-billing

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: .air.toml  Dockerfile.dev  go.mod  go.sum
api/cmd/migrate/: main.go
api/cmd/server/: main.go
api/internal/db/: db.go
api/internal/handler/: health.go  health_test.go
api/internal/middleware/: auth.go  auth_test.go  logging.go  logging_test.go  tenant.go  tenant_test.go
api/migrations/: 001_create_tenants.sql  002_create_billing_tables.sql  003_create_transaction_tables.sql  004_enable_rls.sql
billing-engine/: Cargo.toml
billing-engine/src/: error.rs  lib.rs  money.rs  plans.rs
dashboard/: Dockerfile.dev  index.html  package-lock.json  package.json
dashboard/src/: App.tsx  main.tsx
dashboard/src/utils/: money.test.ts  money.ts
reporting/: Dockerfile.dev  pyproject.toml
reporting/src/db/: connection.py
reporting/src/metrics/: churn.py
reporting/src/models/: tenant.py
reporting/tests/: test_churn.py  test_models.py
